--- a/index.src.html
+++ b/index.src.html
@@ -1167,7 +1167,7 @@ interface VideoEncoder {
   undefined reset();
   undefined close();
 
-  static Promise<boolean> isConfigSupported(VideoEncoderConfig config);
+  static Promise<VideoEncoderSupport> isConfigSupported(VideoEncoderConfig config);
 };
 
 dictionary VideoEncoderInit {
