Clarify wording in AV1 codec registry.
Fixed: #414

--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -75,8 +75,8 @@ EncodedVideoChunk data {#encodedvideochunk-data}
 ================================================
 
 {{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
-either an "open bit-stream unit" (OBU) or "low-overhead OBU" as described in
-Section 5 of [[AV1]].
+data compliant to the "low-overhead bitstream format" as described in Section 5
+of [[AV1]].
 
 VideoDecoderConfig description {#videodecoderconfig-description}
 ================================================================
