speculatively address comments

--- a/index.src.html
+++ b/index.src.html
@@ -3796,8 +3796,10 @@ partial dictionary GPUExternalTextureDescriptor {
 
 The lifetime of such a {{GPUExternalTexture}} object is implicitly tied to the
 lifetime of the source {{VideoFrame}} object.
-When the {{VideoFrame}} is [=Close VideoFrame|closed=] (implicitly or
-explicitly), the {{GPUExternalTexture}} is *destroyed*, so no further operations
+When the {{VideoFrame}} is [=Close VideoFrame|closed=]
+(e.g. via {{VideoFrame/close()}} or
+[[videoframe-transfer-serialization#|transferring the VideoFrame]]),
+the {{GPUExternalTexture}} is *destroyed*, so no further operations
 using it can be issued.
 
 VideoFrame CopyTo() Options {#videoframe-copyto-options}
