Avoiding reserved "must" and "may" by using synonyms "needs to" and "can"

--- a/h263_codec_registration.src.html
+++ b/h263_codec_registration.src.html
@@ -75,21 +75,21 @@ The codec string begins with the prefix `"h263."`, with a suffix of 1 character
 describing the version of the specification: `"h263.1"` for the first revision
 ([[H.263v1]]), `"h263.2"` for the second revision ([[H.263v2]]), or `"h263.3"`
 for the third revision ([[H.263v3]]). As the specifications are backwards
-compatible, an encoder may encode using an earlier revision than specified, and
-a decoder may decode using a later revision than specified.
+compatible, an encoder can encode using an earlier revision than specified, and
+a decoder can decode using a later revision than specified.
 
-`"h263.3"`, but no prior revision, may further be suffixed with a `"."` and a
+`"h263.3"`, but no prior revision, can further be suffixed with a `"."` and a
 one-character profile number, as specified in Annex X.2 of [[H.263v3]]. If a
-profile is not specified, then an encoder may use any optional features and a
-decoder must support all optional features. This may further be suffixed by a
-`"."` and a two-character level, as described in Table X.2 of [[H.263v3]]. If a
-level is not specified, then an encoder may support any level or may support
-formats other than those in any specified level, and a decoder must support any
-level and may support formats other than those in any specified level.
+profile is not specified, then an encoder can use any optional features and a
+decoder needs to support all optional features. This can further be suffixed by
+a `"."` and a two-character level, as described in Table X.2 of [[H.263v3]]. If
+a level is not specified, then an encoder can support any level or can support
+formats other than those in any specified level, and a decoder needs to support
+any level and can support formats other than those in any specified level.
 
 As revisions of H.263 prior to H.263v3 do not have profiles or levels, if
-`"h263.1"` or `"h263.2"` is specified, then an encoder may support any optional
-features in the specified revision, and a decoder must support all optional
+`"h263.1"` or `"h263.2"` is specified, then an encoder can support any optional
+features in the specified revision, and a decoder needs to support all optional
 features in the specified revision. The non-normative profiles and levels
 specified in Appendix II are not used.
 
@@ -142,7 +142,7 @@ H.263v2 is also known as H.263+ or H.263 1998. H.263v3 is also known as H.263++
 or H.263 2005.
 
 MPEG-4 Part 2 specifies a video encoding format which is backwards compatible
-with H.263 (H.263 streams may be decoded as MPEG-4 Part 2), but it is not
+with H.263 (H.263 streams can be decoded as MPEG-4 Part 2), but it is not
 forwards compatible (MPEG-4 Part 2 streams do not decode as H.263), and it is
 not covered by this registration.
 
