address comments (hopefully)

--- a/index.src.html
+++ b/index.src.html
@@ -3788,7 +3788,7 @@ objects, which can be read from WebGPU shaders.
 The definition of the {{GPUExternalTextureDescriptor/source}} member of
 {{GPUExternalTextureDescriptor}} is modified to allow {{VideoFrame}}:
 
-<xmp>
+<xmp class='idl'>
 partial dictionary GPUExternalTextureDescriptor {
     required (HTMLVideoElement or VideoFrame) source;
 };
@@ -3798,7 +3798,7 @@ The lifetime of such a {{GPUExternalTexture}} object is implicitly tied to the
 lifetime of the source {{VideoFrame}} object.
 When the {{VideoFrame}} is [=Close VideoFrame|closed=]
 (e.g. via {{VideoFrame/close()}} or
-[[videoframe-transfer-serialization#|transferring the VideoFrame]]),
+[[#videoframe-transfer-serialization|transferring the VideoFrame]]),
 the {{GPUExternalTexture}} is *destroyed*, so no further operations
 using it can be issued.
 
