Replace channelCount with numberOfChannels throughout
The `channelCount` property does not exist on `AudioDecoderConfig`. It should
rather be `numberOfChannels`.

--- a/vorbis_codec_registration.src.html
+++ b/vorbis_codec_registration.src.html
@@ -37,7 +37,7 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: AudioDecoderConfig.sampleRate; url: dom-audiodecoderconfig-samplerate
-        text: AudioDecoderConfig.channelCount; url: dom-audiodecoderconfig-channelcount
+        text: AudioDecoderConfig.numberOfChannels; url: dom-audiodecoderconfig-numberofchannels
     type: dfn
         for: EncodedAudioChunkType; text: key; url: dom-encodedaudiochunktype-key
         for: EncodedAudioChunk; text: [[internal data]]; url: dom-encodedaudiochunk-internal-data-slot
@@ -85,7 +85,7 @@ three Vorbis header packets, respectively the identification header, the comment
 header, and the setup header, in this order, as described in section 4.2 of
 [[VORBIS]].
 
-The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.channelCount}}
+The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.numberOfChannels}}
 members are overridden by what the decoder finds in the identification header.
 
 NOTE: The comments header content is not used by [[WEBCODECS]].
