--- a/aac_codec_registration.src.html
+++ b/aac_codec_registration.src.html
@@ -37,7 +37,7 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: AudioDecoderConfig.sampleRate; url: dom-audiodecoderconfig-samplerate
-        text: AudioDecoderConfig.channelCount; url: dom-audiodecoderconfig-channelcount
+        text: AudioDecoderConfig.numberOfChannels; url: dom-audiodecoderconfig-numberofchannels
     type: dfn
         for: EncodedAudioChunkType; text: key; url: dom-encodedaudiochunktype-key
         for: EncodedAudioChunk; text: [[internal data]]; url: dom-encodedaudiochunk-internal-data-slot
@@ -94,7 +94,7 @@ and the bitstream is assumed to be in {{AacBitstreamFormat/aac}}.
 If the {{AudioDecoderConfig.description}} is not present, the bitstream is
 assumed to be in {{AacBitstreamFormat/adts}} format.
 
-The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.channelCount}}
+The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.numberOfChannels}}
 members are ignored.
 
 EncodedAudioChunk type {#encodedaudiochunk-type}
