--- a/flac_codec_registration.src.html
+++ b/flac_codec_registration.src.html
@@ -37,7 +37,7 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: AudioDecoderConfig.sampleRate; url: dom-audiodecoderconfig-samplerate
-        text: AudioDecoderConfig.channelCount; url: dom-audiodecoderconfig-channelcount
+        text: AudioDecoderConfig.numberOfChannels; url: dom-audiodecoderconfig-numberofchannels
     type: dfn
         for: EncodedAudioChunkType; text: key; url: dom-encodedaudiochunktype-key
         for: EncodedAudioChunk; text: [[internal data]]; url: dom-encodedaudiochunk-internal-data-slot
@@ -78,7 +78,7 @@ AudioDecoderConfig description {#audiodecoderconfig-description}
 - A `METADATA_BLOCK` of type `STEAMINFO` as described in [[FLAC]]
 - Optionaly other `METADATA_BLOCK`, that are not used by the specification
 
-The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.channelCount}}
+The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.numberOfChannels}}
 members are overridden by what the decoder finds in the
 {{AudioDecoderConfig.description}}.
 
