--- a/mp3_codec_registration.src.html
+++ b/mp3_codec_registration.src.html
@@ -36,7 +36,7 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: AudioDecoderConfig.sampleRate; url: dom-audiodecoderconfig-samplerate
-        text: AudioDecoderConfig.channelCount; url: dom-audiodecoderconfig-channelcount
+        text: AudioDecoderConfig.numberOfChannels; url: dom-audiodecoderconfig-numberofchannels
     type: dfn
         for: EncodedAudioChunkType; text: key; url: dom-encodedaudiochunktype-key
         for: EncodedAudioChunk; text: [[internal data]]; url: dom-encodedaudiochunk-internal-data-slot
@@ -80,7 +80,7 @@ AudioDecoderConfig description {#audiodecoderconfig-description}
 
 {{AudioDecoderConfig.description}} is not used for this codec.
 
-The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.channelCount}}
+The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.numberOfChannels}}
 members are ignored.
 
 
