--- a/index.src.html
+++ b/index.src.html
@@ -4180,17 +4180,17 @@ enum VideoColorPrimaries {
 </xmp>
 
 <dl>
-  <dt><dfn enum-value for=VideoColorPrimaries>bt709</dfn</dt>
+  <dt><dfn enum-value for=VideoColorPrimaries>bt709</dfn></dt>
   <dd>
     Color primaries used by BT.709 and sRGB, as described by [[H.273]]
     section 8.1 table 2 value 1.
   </dd>
-  <dt><dfn enum-value for=VideoColorPrimaries>bt470bg</dfn</dt>
+  <dt><dfn enum-value for=VideoColorPrimaries>bt470bg</dfn></dt>
   <dd>
     Color primaries used by BT.601 PAL, as described by [[H.273]]
     section 8.1 table 2 value 5.
   </dd>
-  <dt><dfn enum-value for=VideoColorPrimaries>smpte170m</dfn</dt>
+  <dt><dfn enum-value for=VideoColorPrimaries>smpte170m</dfn></dt>
   <dd>
     Color primaries used by BT.601 NTSC, as described by [[H.273]]
     section 8.1 table 2 value 6.
@@ -4211,17 +4211,17 @@ enum VideoTransferCharacteristics {
 </xmp>
 
 <dl>
-  <dt><dfn enum-value for=VideoTransferCharacteristics>bt709</dfn</dt>
+  <dt><dfn enum-value for=VideoTransferCharacteristics>bt709</dfn></dt>
   <dd>
     Transfer characteristics used by BT.709, as described by [[H.273]]
     section 8.2 table 3 value 1.
   </dd>
-  <dt><dfn enum-value for=VideoTransferCharacteristics>smpte170m</dfn</dt>
+  <dt><dfn enum-value for=VideoTransferCharacteristics>smpte170m</dfn></dt>
   <dd>
     Transfer characteristics used by BT.601, as described by [[H.273]]
     section 8.2 table 3 value 6.
   </dd>
-  <dt><dfn enum-value for=VideoTransferCharacteristics>iec61966-2-1</dfn</dt>
+  <dt><dfn enum-value for=VideoTransferCharacteristics>iec61966-2-1</dfn></dt>
   <dd>
     Transfer characteristics used by sRGB, as described by [[H.273]]
     section 8.2 table 3 value 13.
@@ -4243,22 +4243,22 @@ enum VideoMatrixCoefficients {
 </xmp>
 
 <dl>
-  <dt><dfn enum-value for=VideoMatrixCoefficients>rgb</dfn</dt>
+  <dt><dfn enum-value for=VideoMatrixCoefficients>rgb</dfn></dt>
   <dd>
     Matrix coefficients used by sRGB, as described by [[H.273]]
     section 8.3 table 4 value 0.
   </dd>
-  <dt><dfn enum-value for=VideoMatrixCoefficients>bt709</dfn</dt>
+  <dt><dfn enum-value for=VideoMatrixCoefficients>bt709</dfn></dt>
   <dd>
     Matrix coefficients used by BT.709, as described by [[H.273]]
     section 8.3 table 4 value 1.
   </dd>
-  <dt><dfn enum-value for=VideoMatrixCoefficients>bt470bg</dfn</dt>
+  <dt><dfn enum-value for=VideoMatrixCoefficients>bt470bg</dfn></dt>
   <dd>
     Matrix coefficients used by BT.601 PAL, as described by [[H.273]]
     section 8.3 table 4 value 5.
   </dd>
-  <dt><dfn enum-value for=VideoMatrixCoefficients>smpte170m</dfn</dt>
+  <dt><dfn enum-value for=VideoMatrixCoefficients>smpte170m</dfn></dt>
   <dd>
     Matrix coefficients used by BT.601 NTSC, as described by [[H.273]]
     section 8.3 table 4 value 6.
@@ -4930,8 +4930,8 @@ interface ImageTrackList {
   getter ImageTrack (unsigned long index);
 
   readonly attribute Promise<undefined> ready;
-  [EnforceRange] readonly attribute unsigned long length;
-  [EnforceRange] readonly attribute long selectedIndex;
+  readonly attribute unsigned long length;
+  readonly attribute long selectedIndex;
   readonly attribute ImageTrack? selectedTrack;
 };
 </xmp>
@@ -4978,8 +4978,8 @@ ImageTrack Interface {#imagetrack-interface}
 [Exposed=(Window,DedicatedWorker)]
 interface ImageTrack : EventTarget {
   readonly attribute boolean animated;
-  [EnforceRange] readonly attribute unsigned long frameCount;
-  [EnforceRange] readonly attribute unrestricted float repetitionCount;
+  readonly attribute unsigned long frameCount;
+  readonly attribute unrestricted float repetitionCount;
   attribute EventHandler onchange;
   attribute boolean selected;
 };
