Add mentions of MIME to definition of ImageDecoder.type attribute

--- a/index.src.html
+++ b/index.src.html
@@ -4316,7 +4316,7 @@ interface ImageDecoder {
     {{ImageDecoder/[[encoded data]]}}
 
 : <dfn attribute for=ImageDecoder>\[[type]]</dfn>
-:: A string reflecting the value of {{ImageDecoderInit/type}} given at
+:: A string reflecting the value of the MIME {{ImageDecoderInit/type}} given at
     construction.
 
 : <dfn attribute for=ImageDecoder>\[[complete]]</dfn>
@@ -4433,7 +4433,7 @@ interface ImageDecoder {
 
 ### Attributes ### {#imagedecoder-attributes}
 : <dfn attribute for=ImageDecoder>type</dfn>
-:: A string reflecting the value of {{ImageDecoderInit/type}} given at
+:: A string reflecting the value of the MIME {{ImageDecoderInit/type}} given at
     construction.
 
     The {{ImageDecoder/type}} getter steps are to return
